== 0.9.1 "Some are half-wild, and some are just outlaws." 2008-02-29

* As a last resort, look for */* in the formats before throwing NotAcceptable (TODO: Clean this up)
* Fix perform_content_negotiation to correctly handle :format in params. Fix render_* to correctly return the correct content_type.
* remove hooks.rb, they were premature and only used in one place
* fix evented mongrel to not go crazy
* Calling /foo.pdf should throw a 406 if :pdf is not a registered mime.
* touch up dispatcher a bit, remove some un-needed code from the hot path
* fix dispatcher to not parse the params twice, still supports request_params
* fix Exception in exception.html.erb
* moved rspec rake tasks into core.  Added Merb.rakefiles, which is now used by Merb::Plugins.rakefiles.  Changed Kernel#use_test to only load dependency arguments when Merb.env is nil or test.
* do not load test framework unless Merb.env == 'test'
* Use new Object.make_module to create the module instead of old hackish solution.
* Don't clear our mimes previously defined.
* Fixed clean task deleting everything in the lib folder
* Kernel#dependency requires gems/files in a before_app_loads block.
* Move dependency loading after framework and look for framework.rb
* Creates helper stub modules for controllers.
* fix blank path error.
* Cooler errors
* add named routes to error page
* updates to nested resources
* get autotest working for merb-core
* Symbolize params in route generation, to accomodate Mashes
* Fixes :status not working on strings.
* update thin adapter to newest way of silencing the log
* :format => :html possible in partials
* print request URI when "No routes match the request" error thrown
* fix merb -i
* Make Merb.start default to the runner adapter
* It's now possible to send binary data using the send_data method
  and to specify the disposition, filename and type of the data being sent.
* Fix memcached session writes
* allow the setting of a custom session key